--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta name="description" content="Webpage description goes here" />
-  <meta charset="utf-8">
-  <title>Change_me</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="">
-  <link rel="stylesheet" href="css/style.css">
- 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="app.js"></script>
 </head>
-
 <body>
-  
-<div class="container">
-  
-</div>
-
-<script>
-</script>
-
+    <h1>Rock Paper Scissors</h1>
 </body>
 </html>
